--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,10 @@
         </label>
         <button type="submit">Search</button>
       </form>
+      <div class="loader-overlay" id="loader-overlay">
+        <div class="loader"></div>
+      </div>
+      <ul class="gallery"></ul>
     </main>
     <script type="module" src="./main.js"></script>
   </body>
